--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
+# MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/podoedb?useUnicode=yes&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=Asia/Seoul
-spring.datasource.username=root
-spring.datasource.password=1234
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.thymeleaf.cache=false
+
+server.port=8080
+
+logging.level.back.ahwhew.controller=debug
+server.servlet.encoding.force-response=true
+
+# application.properties ?? application.yml? ??
+spring.mvc.cache.handlers=false
