--- a/.gitignore
+++ b/.gitignore
@@ -38,5 +38,6 @@ out/
 
 ## 환경변수 설정
 *.yml
-**/application.properties
+*.properties
+/src/main/resources/application.properties
 /src/main/resources/application.yml
