--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ server.port=8080
 logging.level.back.ahwhew.controller=debug
 server.servlet.encoding.force-response=true
 
-# application.properties ?? application.yml? ??
+# application.properties \uB610\uB294 application.yml\uC5D0 \uCD94\uAC00
 spring.mvc.cache.handlers=false
