--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,12 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-//	runtimeOnly 'com.mysql:mysql-connector-j'
 	runtimeOnly 'mysql:mysql-connector-java:8.0.32'
 
 	implementation 'io.jsonwebtoken:jjwt:0.9.1' // 자바 JWT 라이브러리
 	implementation 'javax.xml.bind:jaxb-api:2.3.1' // XML 문서와 JAVA 객체간 매핑 자동화
+
+	implementation 'org.springframework.boot:spring-boot-starter-mail' // email 인증
 }
 
 tasks.named('test') {
