--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,8 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt:0.9.1' // 자바 JWT 라이브러리
 	implementation 'javax.xml.bind:jaxb-api:2.3.1' // XML 문서와 JAVA 객체간 매핑 자동화
 
-	implementation 'org.springframework.boot:spring-boot-starter-mail' // email 인증
+	// 이메일 인증
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.0.5'
 }
 
 tasks.named('test') {
