--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 
 	// S3
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	// 워터마크
+	implementation 'com.itextpdf:itext7-core:8.0.2'
 }
 
 tasks.named('test') {
