--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,7 +80,7 @@ jobs:
         ./spring-build.zip s3://backend-podostore
 
     - name: Code Deploy 배포 요청
-      run: aws deploy create-deployment --application-name spring-deploy
+      run: aws deploy create-deployment --application-name deploy
         --deployment-config-name CodeDeployDefault.OneAtATime
         --deployment-group-name spring-deploy-group
         --s3-location bucket=backend-podostore,bundleType=zip,key=spring-build.zip
