--- a/docker/docker-compose.blue.yml
+++ b/docker/docker-compose.blue.yml
@@ -14,3 +14,7 @@ services:
     # 환경변수 - 한국 시간 설정
     environment:
       - TZ=Asia/Seoul
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
