--- a/docker/docker-compose.blue.yml
+++ b/docker/docker-compose.blue.yml
@@ -14,9 +14,15 @@ services:
     # 환경변수 - 한국 시간 설정
     environment:
       - TZ=Asia/Seoul
+      - SPRING_DATA_REDIS_HOST=redis-blue
+      - SPRING_DATA_REDIS_PORT=6379
+    depends_on:
+      - redis
   redis:
     image: redis
     container_name: redis-blue
     ports:
       - "6380:6379"
-
+networks:
+  default:
+    name: blue-network
