[REFACTOR] deploy.yml 수정
github actions에서 수동 시작이 가능하도록 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,8 @@ name: BackEnd - CI/CD - deploy
 on:
   push:
     branches: [ "main" ]
+  workflow_dispatch: # 수동 실행을 위한 설정
+
 
 permissions:
   contents: read
