--- a/appspec.yml
+++ b/appspec.yml
@@ -5,6 +5,7 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/app
+    file_exists_behavior: OVERWRITE
     overwrite: yes
 
 permissions:
