--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,12 @@
-# jdk 21 Image Start
-FROM openjdk:21-jdk
-# 인자 정리 - jar
-ARG JAR_FILE=*.jar
-# jar file copy
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java", "-Dspring.profiles.active=docker", "-jar", "/app.jar"]
+# 1단계: 빌드 이미지 (Maven이나 Gradle 사용 시)
+FROM maven:3.9.6-eclipse-temurin-21 AS build
+WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
+
+# 2단계: 실제 실행 이미지 (경량 JRE)
+FROM openjdk:21-jdk-slim
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
+EXPOSE 8080
+ENTRYPOINT ["java", "-Dspring.profiles.active=docker", "-jar", "app.jar"]
