--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,12 +1,4 @@
-# 1단계: 빌드 이미지 (Maven이나 Gradle 사용 시)
-FROM maven:3.9.6-eclipse-temurin-21 AS build
+FROM openjdk:21-jdk-slim  # 경량화된 이미지 사용
 WORKDIR /app
-COPY . .
-RUN mvn clean package -DskipTests
-
-# 2단계: 실제 실행 이미지 (경량 JRE)
-FROM openjdk:21-jdk-slim
-WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
-EXPOSE 8080
+COPY podoemarket-0.0.1-SNAPSHOT.jar app.jar  # 명시적 파일명 지정
 ENTRYPOINT ["java", "-Dspring.profiles.active=docker", "-jar", "app.jar"]
