--- a/appspec.yml
+++ b/appspec.yml
@@ -6,7 +6,6 @@ files:
   - source: /
     destination: /home/ubuntu/app
     file_exists_behavior: OVERWRITE
-    overwrite: yes
 
 permissions:
   - object: /
@@ -15,6 +14,10 @@ permissions:
     group: ubuntu
 
 hooks:
+  BeforeInstall:
+    - location: scripts/clean.sh
+      timeout: 300
+      runas: ubuntu
   ApplicationStart:
     - location: deploy.sh
       timeout: 60
