feat: 이슈 & PR 템플릿 추가

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ out/
 *.properties
 src/main/resources/application.properties
 src/main/resources/application.yml
+
+# .github/ISSUE_TEMPLATE 디렉터리 안의 YAML 파일 제외
+!**/.github/ISSUE_TEMPLATE/*.yml
