fix: AfterInstall 단계에서 이전 배포 캐시 삭제 (#302)

--- a/appspec.yml
+++ b/appspec.yml
@@ -22,3 +22,7 @@ hooks:
     - location: deploy.sh
       timeout: 60
       runas: ubuntu
+  AfterInstall:
+    - location: cleanup-after-install.sh
+      timeout: 60
+      runas: ubuntu
