--- a/docker/docker-compose.blue.yml
+++ b/docker/docker-compose.blue.yml
@@ -18,6 +18,7 @@ services:
       - SPRING_DATA_REDIS_PORT=6379
     depends_on:
       - redis
+    stop_grace_period: 10s
   redis:
     image: redis
     container_name: redis-blue
