--- a/docker/docker-compose.green.yml
+++ b/docker/docker-compose.green.yml
@@ -13,6 +13,7 @@ services:
       - SPRING_DATA_REDIS_PORT=6379
     depends_on:
       - redis
+    stop_grace_period: 10s
   redis:
     image: redis
     container_name: redis-green
