--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,6 +69,7 @@ jobs:
         mkdir deploy
         cp ./docker/docker-compose.blue.yml ./deploy/
         cp ./docker/docker-compose.green.yml ./deploy/
+        cp ./docker/docker-compose.redis.yml ./deploy/
         cp ./appspec.yml ./deploy/
         cp ./docker/Dockerfile ./deploy/
         cp ./scripts/*.sh ./deploy/
