fix: 조회수 로직 수정 및 redis 보안 요소 추가(#401)

--- a/docker/docker-compose.blue.yml
+++ b/docker/docker-compose.blue.yml
@@ -16,6 +16,7 @@ services:
       - TZ=Asia/Seoul
       - SPRING_DATA_REDIS_HOST=redis
       - SPRING_DATA_REDIS_PORT=6379
+      - SPRING_DATA_REDIS_PASSWORD=${REDIS_PASSWORD}
     stop_grace_period: 10s
 
 networks:
