--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,12 @@ jobs:
         echo "appspec.yml file found, contents:"
         cat ./appspec.yml
 
+    - name: Create .env for Docker Compose
+      run: |
+        mkdir -p deploy
+        echo "REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}" > ./deploy/.env
+      shell: bash
+
     - name: zip file 생성
       run: |
         mkdir deploy
