--- a/docker/docker-compose.redis.yml
+++ b/docker/docker-compose.redis.yml
@@ -4,10 +4,22 @@ services:
   redis:
     image: redis:latest
     container_name: redis
-    ports:
-      - "6380:6379"
+    command: >
+      sh -c "redis-server
+             --requirepass ${REDIS_PASSWORD}
+             --protected-mode yes
+             --dir /data
+             --dbfilename dump.rdb
+             --save 900 1
+             --save 300 10
+             --save 60 10000"
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
     volumes:
       - redis-data:/data
+    restart: unless-stopped
+    networks:
+      - app-network
 
 networks:
   default:
