--- a/appspec.yml
+++ b/appspec.yml
@@ -4,7 +4,7 @@ os: linux
 
 files:
   - source: /
-    destination: /home/ubuntu/app
+    destination: /data/home/ubuntu/app
     file_exists_behavior: OVERWRITE
 
 permissions:
