--- a/appspec.yml
+++ b/appspec.yml
@@ -8,21 +8,18 @@ files:
     file_exists_behavior: OVERWRITE
 
 permissions:
-  - object: /
+  - object: /data/home/ubuntu/app
     pattern: "**"
     owner: ubuntu
     group: ubuntu
 
 hooks:
-  BeforeInstall:
-    - location: clean.sh
-      timeout: 300
-      runas: ubuntu
-  ApplicationStart:
-    - location: deploy.sh
-      timeout: 60
-      runas: ubuntu
   AfterInstall:
     - location: cleanup-after-install.sh
       timeout: 60
+      runas: root
+
+  ApplicationStart:
+    - location: deploy.sh
+      timeout: 300
       runas: root
