--- a/docker/docker-compose.blue.yml
+++ b/docker/docker-compose.blue.yml
@@ -1,25 +1,20 @@
-#docker-compose.blue.yml
-
-#blue
 services:
-  # 서비스의 이름
   backend:
-    # 현재 디렉토리에서의 Dockerfile을 사용하여 Docker 이미지를 빌드
     build: .
-    # 호스트의 8081 포트와 컨테이너의 8080 포트를 매핑
     ports:
       - "8081:8080"
-    # 컨테이너의 이름
     container_name: spring-blue
-    # 환경변수 - 한국 시간 설정
     environment:
       - TZ=Asia/Seoul
       - SPRING_DATA_REDIS_HOST=redis
       - SPRING_DATA_REDIS_PORT=6379
       - SPRING_DATA_REDIS_PASSWORD=${REDIS_PASSWORD}
     stop_grace_period: 10s
+    networks:
+      app-network:
+        aliases:
+          - spring-backend
 
 networks:
-  default:
+  app-network:
     external: true
-    name: app-network
