--- a/docker/docker-compose.green.yml
+++ b/docker/docker-compose.green.yml
@@ -1,6 +1,3 @@
-#docker-compose.green.yml
-
-#green
 services:
   backend:
     build: .
@@ -13,8 +10,11 @@ services:
       - SPRING_DATA_REDIS_PORT=6379
       - SPRING_DATA_REDIS_PASSWORD=${REDIS_PASSWORD}
     stop_grace_period: 10s
+    networks:
+      app-network:
+        aliases:
+          - spring-backend
 
 networks:
-  default:
+  app-network:
     external: true
-    name: app-network
