--- a/docker/docker-compose.green.yml
+++ b/docker/docker-compose.green.yml
@@ -14,6 +14,11 @@ services:
       app-network:
         aliases:
           - spring-backend
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/" ]
+      interval: 5s
+      timeout: 3s
+      retries: 10
 
 networks:
   app-network:
